--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "up:db": "docker-compose up -d",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier -w ./src"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.3",
