feat(zustand): added stores based on route

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "server/*": ["server/*"],
       "components-common/*": ["components-common/*"],
       "components-layout/*": ["components-layout/*"],
+      "components-core/*": ["components-core/*"],
       "types/*": ["types/*"],
       "utils/*": ["utils/*"],
       "env/*": ["env/*"],
