--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "clsx": "^1.2.1",
     "next": "12.3.1",
     "next-auth": "^4.12.3",
+    "leaflet": "^1.8.0",
+    "react-leaflet": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
@@ -31,6 +33,7 @@
     "zustand": "^4.1.2"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.7.11",
     "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
