--- a/package.json
+++ b/package.json
@@ -21,23 +21,29 @@
     "@trpc/next": "10.0.0-proxy-beta.15",
     "@trpc/react": "10.0.0-proxy-beta.15",
     "@trpc/server": "10.0.0-proxy-beta.15",
+    "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
+    "cookie": "^0.5.0",
+    "jsonwebtoken": "^8.5.1",
+    "leaflet": "^1.8.0",
     "next": "12.3.1",
     "next-auth": "^4.12.3",
-    "leaflet": "^1.8.0",
-    "react-leaflet": "^4.0.1",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.0.1",
     "superjson": "1.9.1",
     "zod": "^3.18.0",
     "zustand": "^4.1.2"
   },
   "devDependencies": {
-    "@types/leaflet": "^1.7.11",
+    "@faker-js/faker": "^7.6.0",
     "@tailwindcss/forms": "^0.5.3",
+    "@types/leaflet": "^1.7.11",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.7",
@@ -48,7 +54,8 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "prisma": "^4.4.0",
     "tailwindcss": "^3.1.6",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "uuid": "^9.0.0"
   },
   "ct3aMetadata": {
     "initVersion": "6.1.2"
