--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
     "cookie": "^0.5.0",
+    "geolib": "^3.3.3",
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.8.0",
     "next": "12.3.1",
