feat(workspace): added workspace and started api routes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
       "components-core/*": ["components-core/*"],
       "types/*": ["types/*"],
       "utils/*": ["utils/*"],
-      "env/*": ["env/*"],
+      "global-store/*": ["global-store/*"],
 
     }
   },
