--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcrypt": "^5.1.0",
     "clsx": "^1.2.1",
     "cookie": "^0.5.0",
+    "date-fns": "^2.29.3",
     "geolib": "^3.3.3",
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.8.0",
