--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "format": "prettier -w ./src"
+    "format": "prettier -w ./src",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.3",
@@ -53,6 +54,7 @@
     "autoprefixer": "^10.4.7",
     "eslint": "8.22.0",
     "eslint-config-next": "12.3.1",
+    "husky": "^8.0.1",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
