--- a/package.json
+++ b/package.json
@@ -1,70 +1,73 @@
 {
-  "name": "real-estate-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "build": "next build",
-    "vercel-build": "prisma generate && prisma migrate deploy && next build",
-    "dev": "yarn up:db && next dev",
-    "up:db": "docker-compose up -d",
-    "postinstall": "prisma generate",
-    "lint": "next lint",
-    "start": "next start",
-    "format": "prettier -w ./src",
-    "prepare": "husky install"
-  },
-  "dependencies": {
-    "@headlessui/react": "^1.7.3",
-    "@heroicons/react": "^2.0.12",
-    "@hookform/resolvers": "^2.9.10",
-    "@next-auth/prisma-adapter": "^1.0.4",
-    "@prisma/client": "^4.4.0",
-    "@tanstack/react-query": "^4.10.0",
-    "@trpc/client": "10.0.0-proxy-beta.15",
-    "@trpc/next": "10.0.0-proxy-beta.15",
-    "@trpc/react": "10.0.0-proxy-beta.15",
-    "@trpc/server": "10.0.0-proxy-beta.15",
-    "bcrypt": "^5.1.0",
-    "clsx": "^1.2.1",
-    "cookie": "^0.5.0",
-    "date-fns": "^2.29.3",
-    "geolib": "^3.3.3",
-    "jsonwebtoken": "^8.5.1",
-    "leaflet": "^1.8.0",
-    "next": "12.3.1",
-    "next-auth": "^4.12.3",
-    "nodemailer": "^6.8.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.38.0",
-    "react-leaflet": "^4.0.1",
-    "superjson": "1.9.1",
-    "zod": "^3.18.0",
-    "zustand": "^4.1.2"
-  },
-  "devDependencies": {
-    "@faker-js/faker": "^7.6.0",
-    "@tailwindcss/forms": "^0.5.3",
-    "@types/leaflet": "^1.7.11",
-    "@types/node": "18.0.0",
-    "@types/react": "18.0.14",
-    "@types/react-dom": "18.0.5",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.3.1",
-    "husky": "^8.0.1",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "prisma": "^4.4.0",
-    "tailwindcss": "^3.1.6",
-    "typescript": "^4.8.4",
-    "uuid": "^9.0.0"
-  },
-  "ct3aMetadata": {
-    "initVersion": "6.1.2"
-  }
+    "name": "real-estate-app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "build": "next build",
+        "vercel-build": "prisma generate && prisma migrate deploy && next build",
+        "dev": "yarn up:db && next dev",
+        "up:db": "docker-compose up -d",
+        "postinstall": "prisma generate",
+        "lint": "next lint",
+        "start": "next start",
+        "check-format": "prettier --check ./src",
+        "check-types": "tsc --pretty --noEmit",
+        "check-lint": "eslint . --ext ts --ext tsx --ext js",
+        "format": "prettier -w ./src",
+        "prepare": "husky install"
+    },
+    "dependencies": {
+        "@headlessui/react": "^1.7.3",
+        "@heroicons/react": "^2.0.12",
+        "@hookform/resolvers": "^2.9.10",
+        "@next-auth/prisma-adapter": "^1.0.4",
+        "@prisma/client": "^4.4.0",
+        "@tanstack/react-query": "^4.10.0",
+        "@trpc/client": "10.0.0-proxy-beta.15",
+        "@trpc/next": "10.0.0-proxy-beta.15",
+        "@trpc/react": "10.0.0-proxy-beta.15",
+        "@trpc/server": "10.0.0-proxy-beta.15",
+        "bcrypt": "^5.1.0",
+        "clsx": "^1.2.1",
+        "cookie": "^0.5.0",
+        "date-fns": "^2.29.3",
+        "geolib": "^3.3.3",
+        "jsonwebtoken": "^8.5.1",
+        "leaflet": "^1.8.0",
+        "next": "12.3.1",
+        "next-auth": "^4.12.3",
+        "nodemailer": "^6.8.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-hook-form": "^7.38.0",
+        "react-leaflet": "^4.0.1",
+        "superjson": "1.9.1",
+        "zod": "^3.18.0",
+        "zustand": "^4.1.2"
+    },
+    "devDependencies": {
+        "@faker-js/faker": "^7.6.0",
+        "@tailwindcss/forms": "^0.5.3",
+        "@types/leaflet": "^1.7.11",
+        "@types/node": "18.0.0",
+        "@types/react": "18.0.14",
+        "@types/react-dom": "18.0.5",
+        "@types/uuid": "^8.3.4",
+        "@typescript-eslint/eslint-plugin": "^5.33.0",
+        "@typescript-eslint/parser": "^5.33.0",
+        "autoprefixer": "^10.4.7",
+        "eslint": "8.22.0",
+        "eslint-config-next": "12.3.1",
+        "husky": "^8.0.1",
+        "postcss": "^8.4.14",
+        "prettier": "^2.7.1",
+        "prettier-plugin-tailwindcss": "^0.1.13",
+        "prisma": "^4.4.0",
+        "tailwindcss": "^3.1.6",
+        "typescript": "^4.8.4",
+        "uuid": "^9.0.0"
+    },
+    "ct3aMetadata": {
+        "initVersion": "6.1.2"
+    }
 }
