--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "devDependencies": {
         "@faker-js/faker": "^7.6.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@tailwindcss/line-clamp": "^0.4.2",
         "@types/leaflet": "^1.7.11",
         "@types/node": "18.0.0",
         "@types/react": "18.0.14",
