--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
         "@hookform/resolvers": "^2.9.10",
         "@next-auth/prisma-adapter": "^1.0.4",
         "@prisma/client": "^4.4.0",
-        "@tanstack/react-query": "^4.10.0",
-        "@trpc/client": "10.0.0-proxy-beta.15",
-        "@trpc/next": "10.0.0-proxy-beta.15",
+        "@tanstack/react-query": "^4.20.4",
+        "@trpc/client": "^10.7.0",
+        "@trpc/next": "^10.7.0",
         "@trpc/react": "10.0.0-proxy-beta.15",
-        "@trpc/server": "10.0.0-proxy-beta.15",
+        "@trpc/react-query": "^10.7.0",
+        "@trpc/server": "^10.7.0",
+        "add": "^2.0.6",
         "bcrypt": "^5.1.0",
         "clsx": "^1.2.1",
         "cookie": "^0.5.0",
@@ -42,6 +44,7 @@
         "react-hook-form": "^7.38.0",
         "react-leaflet": "^4.0.1",
         "superjson": "1.9.1",
+        "yarn": "^1.22.19",
         "zod": "^3.18.0",
         "zustand": "^4.1.2"
     },
