--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "clsx": "^1.2.1",
         "cookie": "^0.5.0",
         "date-fns": "^2.29.3",
+        "framer-motion": "^8.5.5",
         "geolib": "^3.3.3",
         "jsonwebtoken": "^8.5.1",
         "leaflet": "^1.8.0",
