--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "leaflet": "^1.8.0",
         "next": "12.3.1",
         "next-auth": "^4.12.3",
+        "next-axiom": "^0.17.0",
         "nodemailer": "^6.8.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
