--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@trpc/react": "10.0.0-proxy-beta.15",
         "@trpc/react-query": "^10.7.0",
         "@trpc/server": "^10.7.0",
+        "@vercel/analytics": "^0.1.8",
         "add": "^2.0.6",
         "bcrypt": "^5.1.0",
         "clsx": "^1.2.1",
