--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "build": "next build",
+        "build": "prisma generate && prisma migrate deploy && next build",
         "vercel-build": "prisma generate && prisma migrate deploy && next build",
         "dev": "next dev",
         "up:db": "docker-compose up -d",
