--- a/apps/app/package.json
+++ b/apps/app/package.json
@@ -43,6 +43,7 @@
         "nodemailer": "^6.8.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-toastify": "9.1.0",
         "react-hook-form": "^7.38.0",
         "react-leaflet": "^4.0.1",
         "superjson": "1.9.1",
