--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -16,27 +16,20 @@
     "check-types": "tsc --noEmit"
   },
   "peerDependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "18.2.0"
   },
   "devDependencies": {
-    "@heroicons/react": "^2.0.12",
     "@types/react": "18.0.14",
-    "clsx": "^1.2.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/react-dom": "18.0.5",
     "postcss": "^8.4.14",
-    "next": "13.0.2",
     "eslint": "^7.32.0",
     "eslint-config-custom": "*",
     "tailwind-config": "*",
     "tailwindcss": "^3.2.6",
     "tsconfig": "*",
+    "react": "18.2.0",
     "tsup": "^6.1.3",
     "typescript": "^4.8.4"
   }
